various fixes & updates

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,11 +1,11 @@
-jdbc.driver=org.postgresql.Driver
-jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
-jdbc.url=jdbc:postgresql://localhost:5432/cinemaGoDB
-jdbc.user=cinemaGoAdmin
-jdbc.password=cinemaGo
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.dialect=org.hibernate.dialect.MySQLDialect
+jdbc.url=jdbc:mysql://localhost/cinemaGoDB
+jdbc.user=root
+jdbc.password=
 
 hibernate.generate_statistics=true
 hibernate.show_sql=true
 hibernate.format_sql=false
-hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.hbm2ddl.auto=update
