--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,19 @@
 		    <type>jar</type>
 		    <scope>compile</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.4.4</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.4.4</version>
+		</dependency>
+
+	
   
 <!-- Hibernate ORM framework dependencies -->
 		<dependency>
